--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
 </head>
 
 <body>
-	<header class="container">
-		<div class="row">
-			<h1 class="col-sm-4">Laura Jean Manor</h1>
-			<nav class="col-sm-8 text-right">
-				<p>newest</p>
-				<p>catalogue</p>
-				<p>contact</p>
-			</nav>
-		</div>
-
-	</header>
+	
 	<section class="jumbotron">
 		<div class="container">
 			<div class="row text-center">
@@ -29,7 +19,16 @@
 			</div>
 		</div>
 	</section>
-
+	
+<header class="container">
+		<div class="row">
+			<h1 class="col-sm-4">Laura Jean Manor</h1>
+			<nav class="col-sm-8 text-right">
+				<p>about</p>
+				<p>contact</p>
+			</nav>
+		</div>
+	</header>
 
 	<section class="container">
 		<div class="row">
@@ -56,7 +55,7 @@
 
 	<footer class="container">
 		<div class="row">
-			<p class="col-sm-4">&copy; 2016 Skillfair</p>
+			<p class="col-sm-4"></p>
 			<ul class="col-sm-8">
 				<li class="col-sm-1">
 					<img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
