Fixed email address

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="row justify-content-center align-items-center">
 			<div class="col" style="text-align:center">
 				
-					<a href="mailto:ljmanor@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-3x"></i></a>
+					<a href="mailto:ljmanor14@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-3x"></i></a>
 			
 					<a href="https://www.linkedin.com/in/lauramanor" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
 			
