added a sentence about UT

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	<section class="jumbotron">
 		<div class="container">
 			<div class="row">
-				<h1 class="col-sm-4">Laura Manor</h1>
+				<h1 class="col-md">
+					<img src="/images/white-transparent.png"></img>
+				</h1>
 			</div>
 		</div>
 	</section>
@@ -35,7 +37,9 @@
 	<section class="container">
 		<div class="row">
 			<p>
-				Laura is a second year PhD student in Computational Linguistics at the University of Texas at Austin. Her current work is in Natural Language Processing. 
+				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests are in Natural Language Processing. 
+
+
 			</p>
 		</div>
 	</section>
