added a sentence about emory research

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<section class="container">
 		<div class="row">
 			<p>
-				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests are in Natural Language Processing. 
+				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests are in Natural Language Processing. Past research areas include leical semantics, cognitive representations of verbs, and bilingualism. 
 
 
 			</p>
