--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 	<section class="container">
 		<div class="row">
 			<p>
-				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests are in Natural Language Processing. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching. 
+				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests include the automatic summariazation and simplification of legal documents. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching. 
+
+				Check out a writer's aid I wrote for Southern Bolivian Quechua <link rel="stylesheet" type="text/css" href="sbq.lauramanor.com">
 
 
 			</p>
