--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 			<p>
 				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests include the automatic summariazation and simplification of legal documents. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching. 
 
-				Check out a writer's aid I wrote for Southern Bolivian Quechua <link rel="stylesheet" type="text/css" href="sbq.lauramanor.com">
-
+				Check out a writer's aid I wrote for Southern Bolivian Quechua <a href="sbq.lauramanor.com">here</a>
 
 			</p>
 		</div>
