--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
 	</header> -->
 
 
-	<section class="container">
+<section class="container">
 		<div class="row">
+			<div class="col-lg-4 col-lg-offset-4">
 			<p>
-				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests include the automatic summariazation and simplification of legal documents. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching. 
-
-				Check out a writer's aid I wrote for Southern Bolivian Quechua <a href="sbq.lauramanor.com">here</a>
+				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests include the automatic summariazation and simplification of legal documents. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching. <br><br>
+				Check out a writer's aid I wrote for Southern Bolivian Quechua <a href="sbq.lauramanor.com">here</a>.
 
 			</p>
+			</div>
 		</div>
-	</section>
+        </section>
 
 
 	<section class="container">
