--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Laura Jean Manor | Computational Linguistics | UT Austin</title>
 	<meta name="description" content="Laura Manor is a second year graduate student in Linguistics at the Univserity of Texas at Austin.">
 	<meta charset="utf-8" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet"> -->
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -37,9 +37,9 @@
 <section class="container">
 		<div class="row">
 			<div class="col-lg">
-			<p style="font-size:1.5vw;">
+			<p >
 				Hello! I am a second year PhD student in Computational Linguistics at the University of Texas at Austin. My current research interests include the automatic summariazation and simplification of legal documents. Past research areas include lexical semantics, cognitive representations of verbs, and code-switching. <br><br>
-				Check out a writer's aid I wrote for Southern Bolivian Quechua <a href="http://sbq.lauramanor.com">here</a>.
+				Check out a writer's aid I wrote for Southern Bolivian Quechua <a href="http://sbq.lauramanor.com" target="_blank">here</a>.
 
 			</p>
 			</div>
@@ -64,7 +64,9 @@
 			</div>
 		</div>
 	</section>
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 <script>
